jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;


typedef struct
{
	char Indice[4];
	double Aliquota;
	BOOL Tipo;
	double Total;
	BOOL Sequencia;
} AliquotaRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	char FormaPagamento[4];
	double Total;
	int Contador;
} ComprovanteNaoFiscalRec;

DllImport int ECF_EspelhoMFD_DLL_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR Arquivo, const int Documentos[], const int QTD_DOC);

DllImport int ECF_EstornaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagtoEstornar, const PCHAR codFormaPagtoEfetivar, const double valor, const PCHAR observacao);

DllImport int ECF_FechaCupom(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_FechaNaoFiscal(const INTPTR ecfHandle, const PCHAR observacao, const int indicebmp);

DllImport int ECF_FechaRelatorio(const INTPTR ecfHandle);

DllImport int ECF_GetAbout(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetAguardaImpressao(const INTPTR ecfHandle);

DllImport int ECF_GetAguardandoResposta(const INTPTR ecfHandle);

DllImport int ECF_GetALCount(const INTPTR ecfHandle, int* value);

DllImport int ECF_GetAliquota(const INTPTR ecfHandle, AliquotaRec* aliquota, const int index);

DllImport int ECF_GetArqLOG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetArredonda(const INTPTR ecfHandle);

DllImport int ECF_GetArredondaItemMFD(const INTPTR ecfHandle);

DllImport int ECF_GetArredondaPorQtd(const INTPTR ecfHandle);

DllImport int ECF_GetAtivo(const INTPTR ecfHandle);

DllImport int ECF_GetChequePronto(const INTPTR ecfHandle);

DllImport int ECF_GetCliche(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetCNFCount(const INTPTR ecfHandle, int* value);

DllImport int ECF_GetCNPJ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetColunas(const INTPTR ecfHandle);

DllImport int ECF_GetComandoEnviado(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetComandoLOG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetComprovanteNaoFiscal(const INTPTR ecfHandle, ComprovanteNaoFiscalRec* comprovanteNaoFiscal, const int index);

DllImport int ECF_GetDadosReducaoZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDadosUltimaReducaoZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataHora(const INTPTR ecfHandle, double* value);