jACBrFramework/jACBrFramework/src/jACBrFramework/interop/ECFInterop.java

	/**
	 * Original signature : <code>int ECF_EspelhoMFD_DLL_COO(const INTPTR, const int, const int, const PCHAR, const int[], const int)</code><br>
	 * <i>native declaration : line 219</i>
	 */
	int ECF_EspelhoMFD_DLL_COO(int ecfHandle, int COOInicial, int COOFinal, ByteBuffer Arquivo, int Documentos[], int QTD_DOC);
	/**
	 * Original signature : <code>int ECF_EstornaPagamento(const INTPTR, const PCHAR, const PCHAR, const double, const PCHAR)</code><br>
	 * <i>native declaration : line 220</i><br>
	 * @deprecated use the safer methods {@link #ECF_EstornaPagamento(com.sun.jna.Pointer, java.nio.ByteBuffer, java.nio.ByteBuffer, double, java.nio.ByteBuffer)} and {@link #ECF_EstornaPagamento(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, double, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	int ECF_EstornaPagamento(int ecfHandle, Pointer codFormaPagtoEstornar, Pointer codFormaPagtoEfetivar, double valor, Pointer observacao);
	/**
	 * Original signature : <code>int ECF_EstornaPagamento(const INTPTR, const PCHAR, const PCHAR, const double, const PCHAR)</code><br>
	 * <i>native declaration : line 220</i>
	 */
	int ECF_EstornaPagamento(int ecfHandle, ByteBuffer codFormaPagtoEstornar, ByteBuffer codFormaPagtoEfetivar, double valor, ByteBuffer observacao);
	/**
	 * Original signature : <code>int ECF_FechaCupom(const INTPTR, const PCHAR)</code><br>
	 * <i>native declaration : line 221</i><br>
	 * @deprecated use the safer methods {@link #ECF_FechaCupom(com.sun.jna.Pointer, java.nio.ByteBuffer)} and {@link #ECF_FechaCupom(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	int ECF_FechaCupom(int ecfHandle, Pointer observacao);
	/**
	 * Original signature : <code>int ECF_FechaCupom(const INTPTR, const PCHAR)</code><br>
	 * <i>native declaration : line 221</i>
	 */
	int ECF_FechaCupom(int ecfHandle, ByteBuffer observacao);
	/**
	 * Original signature : <code>int ECF_FechaNaoFiscal(const INTPTR, const PCHAR, const int)</code><br>
	 * <i>native declaration : line 222</i><br>
	 * @deprecated use the safer methods {@link #ECF_FechaNaoFiscal(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_FechaNaoFiscal(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_FechaNaoFiscal(int ecfHandle, Pointer observacao, int indicebmp);
	/**
	 * Original signature : <code>int ECF_FechaNaoFiscal(const INTPTR, const PCHAR, const int)</code><br>
	 * <i>native declaration : line 222</i>
	 */
	int ECF_FechaNaoFiscal(int ecfHandle, ByteBuffer observacao, int indicebmp);
	/**
	 * Original signature : <code>int ECF_FechaRelatorio(const INTPTR)</code><br>
	 * <i>native declaration : line 223</i>
	 */
	int ECF_FechaRelatorio(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetAbout(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 224</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetAbout(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetAbout(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetAbout(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetAbout(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 224</i>
	 */
	int ECF_GetAbout(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetAguardaImpressao(const INTPTR)</code><br>
	 * <i>native declaration : line 225</i>
	 */
	int ECF_GetAguardaImpressao(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetAguardandoResposta(const INTPTR)</code><br>
	 * <i>native declaration : line 226</i>
	 */
	int ECF_GetAguardandoResposta(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetALCount(const INTPTR, int*)</code><br>
	 * <i>native declaration : line 227</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetALCount(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #ECF_GetALCount(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int ECF_GetALCount(int ecfHandle, IntByReference value);
	/**
	 * Original signature : <code>int ECF_GetALCount(const INTPTR, int*)</code><br>
	 * <i>native declaration : line 227</i>
	 */
	int ECF_GetALCount(int ecfHandle, IntBuffer value);
	/**
	 * Original signature : <code>int ECF_GetAliquota(const INTPTR, AliquotaRec*, const int)</code><br>
	 * <i>native declaration : line 228</i>
	 */
	int ECF_GetAliquota(int ecfHandle, AliquotaRec aliquota, int index);
	/**
	 * Original signature : <code>int ECF_GetArqLOG(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 229</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetArqLOG(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetArqLOG(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetArqLOG(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetArqLOG(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 229</i>
	 */
	int ECF_GetArqLOG(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetArredonda(const INTPTR)</code><br>
	 * <i>native declaration : line 230</i>
	 */
	int ECF_GetArredonda(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetArredondaItemMFD(const INTPTR)</code><br>
	 * <i>native declaration : line 231</i>
	 */
	int ECF_GetArredondaItemMFD(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetArredondaPorQtd(const INTPTR)</code><br>
	 * <i>native declaration : line 232</i>
	 */
	int ECF_GetArredondaPorQtd(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetAtivo(const INTPTR)</code><br>
	 * <i>native declaration : line 233</i>
	 */
	int ECF_GetAtivo(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetChequePronto(const INTPTR)</code><br>
	 * <i>native declaration : line 234</i>
	 */
	int ECF_GetChequePronto(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetCliche(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 235</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetCliche(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetCliche(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetCliche(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetCliche(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 235</i>
	 */
	int ECF_GetCliche(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetCNFCount(const INTPTR, int*)</code><br>
	 * <i>native declaration : line 236</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetCNFCount(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #ECF_GetCNFCount(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int ECF_GetCNFCount(int ecfHandle, IntByReference value);
	/**
	 * Original signature : <code>int ECF_GetCNFCount(const INTPTR, int*)</code><br>
	 * <i>native declaration : line 236</i>
	 */
	int ECF_GetCNFCount(int ecfHandle, IntBuffer value);
	/**
	 * Original signature : <code>int ECF_GetCNPJ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 237</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetCNPJ(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetCNPJ(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetCNPJ(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetCNPJ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 237</i>
	 */
	int ECF_GetCNPJ(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetColunas(const INTPTR)</code><br>
	 * <i>native declaration : line 238</i>
	 */
	int ECF_GetColunas(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_GetComandoEnviado(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 239</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetComandoEnviado(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetComandoEnviado(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetComandoEnviado(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetComandoEnviado(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 239</i>
	 */
	int ECF_GetComandoEnviado(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetComandoLOG(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 240</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetComandoLOG(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetComandoLOG(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetComandoLOG(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetComandoLOG(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 240</i>
	 */
	int ECF_GetComandoLOG(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetComprovanteNaoFiscal(const INTPTR, ComprovanteNaoFiscalRec*, const int)</code><br>
	 * <i>native declaration : line 241</i>
	 */
	int ECF_GetComprovanteNaoFiscal(int ecfHandle, ComprovanteNaoFiscalRec comprovanteNaoFiscal, int index);
	/**
	 * Original signature : <code>int ECF_GetDadosReducaoZ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 242</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetDadosReducaoZ(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetDadosReducaoZ(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetDadosReducaoZ(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetDadosReducaoZ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 242</i>
	 */
	int ECF_GetDadosReducaoZ(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetDadosUltimaReducaoZ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 243</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetDadosUltimaReducaoZ(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_GetDadosUltimaReducaoZ(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_GetDadosUltimaReducaoZ(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetDadosUltimaReducaoZ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 243</i>
	 */
	int ECF_GetDadosUltimaReducaoZ(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_GetDataHora(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 244</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetDataHora(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetDataHora(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	int ECF_GetDataHora(int ecfHandle, DoubleByReference value);
